<resources>
    <string name="app_name">App_Movie</string>
    <string name="login_screen_logo">Đăng nhập</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="small_font">Nhỏ</string>
    <string name="medium_font">Vừa</string>
    <string name="large_font">Lớn</string>
    <string name="english_language">Tiếng Anh</string>
    <string name="vietnamese_language">Tiếng Việt</string>
    <string name="movie_content">Nội dung phim</string>
    <string name="movie_title">Tên phim</string>
    <string name="year_public">Ngày công chiếu</string>
    <string name="hot_list">Danh sách phim nổi bật</string>
    <string name="movie_genre">Thể loại phim</string>
    <string name="movie_cast">Diễn Viên</string>
    <string name="movie_director">Đạo diễn</string>
    <string name="download_movie">Tải phim</string>
    <string name="watch_movie">Xem Phim</string>
    <string name="log_out">Đăng xuất</string>
    <string name="log_in">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="theme_mode_light">Sáng</string>
    <string name="theme_mode_night">Tối</string>
    <string name="text_size_content">Thay đổi cỡ chữ</string>
    <string name="language_content">Thay đổi ngôn ngữ</string>
    <string name="logout">Đăng xuất</string>
    <string name="change_info_account">Chỉnh sửa thông tin</string>
    <string name="play_movie">Xem Phim</string>
    <string name="password">Mật khẩu</string>
    <string name="login_with_google_account">Đăng nhập bằng Google</string>
    <string name="login_with_phone_number">Đăng nhập bằng Số Điện Thoại</string>
    <string name="no_account">Chưa Có Tài Khoản?</string>
    <string name="edit_info">Đổi thông tin</string>
    <string name="theme_mode_title">Đổi giao diện</string>
    <string name="home">Trang chủ</string>
    <string name="download">Tải Phim</string>
    <string name="Account">Tài khoản</string>
    <string name="password_confirm">Nhập lại mật khẩu</string>
    <string name="register_account">Đăng ký tài khoản</string>
    <string name="user_name">Tên tài khoản:</string>
    <string name="user_age">Tuổi</string>
    <string name="user_sex">Giới tính</string>
    <string name="save_info">Lưu thay đổi</string>
    <string name="cancel_edit">Huỷ thay đổi</string>
    <string name="your_name">Tên của bạn</string>
    <string name="your_age">Tuổi của bạn</string>
    <string name="your_gender">Giới tính của bạn</string>
    <string name="login_problem">Bạn cần phải đăng nhập</string>
    <string name="login_checking">Bạn cần phải đăng nhập mới sử dụng được tính năng này</string>
    <string name="checking_download_file">Phim này đã được tải</string>
    <string-array name="thể_loại">
        <item>Hài</item>
        <item>Kinh dỊ</item>
        <item>Hành động</item>
        <item>Tình cảm</item>
    </string-array>
    <string-array name="genre_id">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="text_size_value">
        <item>0.8</item>
        <item>1</item>
        <item>1.2</item>
    </string-array>
    <string-array name="text_size">
        <item>@string/small_font</item>
        <item>@string/medium_font</item>
        <item>@string/large_font</item>
    </string-array>
    <string-array name="app_Language">
        <item>@string/vietnamese_language</item>
        <item>@string/english_language</item>
    </string-array>
    <string-array name="theme_mode_value">
        <item>@string/theme_mode_light</item>
        <item>@string/theme_mode_night</item>
    </string-array>
    <string-array name="app_Language_values">
        <item>VI</item>
        <item>EN</item>
    </string-array>
    <string-array name="genre">
        <item>Comedy</item>
        <item>Horror</item>
        <item>Action</item>
        <item>Romance</item>
    </string-array>
    <string name="long_text">thor 2 full movie download in hindi 720p thor 2 full movie download in hindi 720p thor 2 full movie download in hindi 720p thor 2 full movie download in hindi 720p</string>
    <string name="audio_sub">Audio &amp; Subtitle </string>
    <string name="lock">Lock</string>
    <string name="speed_1x">Speed(1x)</string>
    <string name="rotate">Rotate</string>
    <string name="tap_to_unlock">Tap to Unlock</string>
    <string name="screen_locked">Screen Locked</string>
    <string name="unlock_controls">Unlock Controls?</string>
    <string name="folder_name">Folder Name</string>
    <string name="_10_videos">10 videos</string>
    <string name="_1_00gb">1.00Gb</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="search">Tìm kiếm phim</string>

</resources>