<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        android:icon="@drawable/format_size"
        android:defaultValue="1"
        android:dialogTitle="@string/text_size_content"
        android:entries="@array/text_size"
        app:useSimpleSummaryProvider="true"
        android:key="textSize"
        android:entryValues="@array/text_size_value"
        android:title="@string/text_size_content" />
    <ListPreferencePreference
        android:icon="@drawable/night_mode"
        android:defaultValue="1"
        android:dialogTitle="@string/theme_mode_light"
        android:entries="@array/text_size"
        app:useSimpleSummaryProvider="true"
        android:key="modeThemes"
        android:entryValues="@array/theme_mode_value"
        android:title="@string/theme_mode_light"
        />
    <ListPreference
        android:icon="@drawable/language"
        android:defaultValue="@string/vietnamese_language"
        android:title="@string/language_content"
        android:entries="@array/app_Language"
        android:key="configLanguage"
        android:entryValues="@array/app_Language_values"
        app:useSimpleSummaryProvider="true"
        android:dialogTitle="@string/language_content" />
</PreferenceScreen>`