<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".HomeFragment">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat.Light.DarkActionBar">

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_anchor="@+id/appBarLayout"
        app:layout_anchorGravity="center"
        app:titleEnabled="false">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/bar_home_fgment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"/>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10px">

                        <TextView
                            android:id="@+id/tv_series"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/botron"
                            android:text="Phim Truyền hình"
                            android:textColor="@color/word"
                            android:textSize="18dp" />

                        <TextView
                            android:id="@+id/movie_theaters"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_marginRight="15dp"
                            android:background="@drawable/botron"
                            android:text="Phim chiếu rạp"
                            android:textColor="@color/word"
                            android:textSize="18dp" />

                        <TextView
                            android:id="@+id/new_movie"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_marginRight="15dp"
                            android:background="@drawable/botron"
                            android:text="Phim Mới"
                            android:textColor="@color/word"
                            android:textSize="18dp" />

                        <Spinner
                            android:id="@+id/the_loai"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@android:color/transparent"
                            android:layout_gravity="center"/>
                    </LinearLayout>
                </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/the_loai_phim1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/the_loai_phim2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="272dp"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            android:src="@drawable/_566809340y397jnilydd15kn" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="15px">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableTop="@drawable/ic_cloud_download_black"
                android:text="@string/download"
                android:textColor="@color/word"/>
            <Button
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/botron"
                android:drawableTop="@drawable/ic_baseline_play_arrow_24"
                android:text="@string/play_movie"
                android:textColor="@color/word"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableTop="@drawable/ic_baseline_info_24"
                android:text="@string/movie_content"
                android:textColor="@color/word"/>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/rim" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Danh sách phim"
            android:textSize="20dp"
            android:textColor="@color/word"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/rim" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Danh sách phim"
            android:textSize="20dp"
            android:textColor="@color/word"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_like"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/rim" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Danh sách phim"
            android:textSize="20dp"
            android:textColor="@color/word"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_hornor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>